--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
- <h1>Este es un h1 primero</h1>
- <p>Este es un parrafo p 1</p>   
+    <div id=container>
+        <div id="post">
+            <h1>Titulo atractivo e interesante</h1>
+            <p>Parrafo que hace cosas increbkes</p>  
+        </div>
+    </div>
+    
+ 
 </body>
 </html>
