--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id=container>
+        <div id="cabecera">
+            cabecera
+        </div>
         <div id="post">
             <h1>Titulo atractivo e interesante</h1>
             <p>Parrafo que hace cosas increbkes</p>  
