--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog
+                EAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
@@ -15,6 +15,10 @@
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>OTRO PARRAFO ADICIONAL</p>
                 <p>UWU</p>
+
+                <p>NUEVA CLASE</p>
+
+
 
             </div>
         </div>
