modifica la cabecera y el color

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                EAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+                TU BLOD DE CABECERA MODIF
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
