footer y una imagen

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,11 @@
 
 
             </div>
+            <div id="footer">
+                HECHO EN PLATZI
+            </div>
         </div>
     </body>
 </html>
+<html>
+  
